--- a/templates/partials/footer.phtml
+++ b/templates/partials/footer.phtml
@@ -9,6 +9,7 @@
     <br>
     <p class="footer-legal">
         <a href="/privacy-policy">Politique de confidentialité</a>.
+        <a href="/changelog">Changelog</a>.
     </p>
 </footer>
 
