--- a/templates/partials/footer.phtml
+++ b/templates/partials/footer.phtml
@@ -8,8 +8,8 @@
     </p>
     <br>
     <p class="footer-legal">
-        <a href="/privacy-policy">Politique de confidentialité</a>.
-        <a href="/changelog">Changelog</a>.
+        <a href="/privacy-policy">Politique de confidentialité     </a>
+        <a href="/changelog">     Changelog</a>
     </p>
 </footer>
 
