--- a/templates/scenarios.phtml
+++ b/templates/scenarios.phtml
@@ -12,7 +12,14 @@ $specific_css = [
     <?php require __DIR__ . '/partials/header.phtml'; ?>
     <main class="main">
         <h2 class="construction">page en construction</h2>
+
+        <div style="text-align: center; margin-top: 40px;">
+            <a href="https://discord.gg/MSct2UaWvw" target="_blank" class="btn-glass">
+                <i class="fab fa-discord"></i> Rejoindre le Discord
+            </a>
+        </div>
     </main>
+
     <?php require __DIR__ . '/partials/footer.phtml'; ?>
     <script src="/js/progress-tracker.js" defer></script>
     <script src="/js/search.js" defer></script>
